--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "deploy": "aws s3 sync build/ s3://lucesansushi.com.br --acl public-read"
+    "deploy": "aws s3 sync web-build/ s3://lucesansushi.com.br --acl public-read"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
@@ -18,7 +18,7 @@
     "expo-app-loading": "~2.0.0",
     "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
-    "expo-web-browser": "~10.2.0",
+    "expo-web-browser": "~10.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
