--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "babel-preset-expo": "^7.12.0",
+    "babel-preset-expo": "9.1.0",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
     "typescript": "~4.3.5"
