--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/source-sans-pro": "^0.2.2",
     "@react-navigation/native": "^6.0.10",
+    "babel-core": "6.0.0",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-font": "~10.1.0",
