--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/source-sans-pro": "^0.2.2",
     "@react-navigation/native": "^6.0.10",
-    "babel-core": "6.0.0",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-font": "~10.1.0",
@@ -28,7 +27,7 @@
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "7.18.2",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
     "typescript": "~4.3.5"
