--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-native-web": "^0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "7.18.2",
+    "babel-preset-expo": "^7.0.0",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
     "typescript": "~4.3.5"
