--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-font": "~10.1.0",
+    "expo-screen-orientation": "~4.2.0",
     "expo-status-bar": "~1.3.0",
     "expo-web-browser": "~10.2.1",
     "react": "17.0.2",
-    "react-dom": "^18.1.0",
+    "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "^0.17.7"
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0",
+    "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
     "typescript": "~4.3.5"
