--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/source-sans-pro": "^0.2.2",
+    "@expo/match-media": "^0.3.0",
     "@react-navigation/native": "^6.0.10",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
@@ -25,7 +26,8 @@
     "react-native": "0.68.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "react-responsive": "^9.0.0-beta.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
