orientation app.json

--- a/app.json
+++ b/app.json
@@ -32,7 +32,8 @@
     },
     "web": {
       "favicon": "./assets/favicon.png",
-      "display": "standalone"
+      "display": "standalone",
+      "orientation": "portrait"
     },
     "description": ""
   }
