--- a/app.json
+++ b/app.json
@@ -34,6 +34,14 @@
       "favicon": "./assets/favicon.png",
       "display": "standalone"
     },
-    "description": ""
+    "description": "",
+    "plugins": [
+      [
+        "expo-screen-orientation",
+        {
+          "initialOrientation": "PORTRAIT"
+        }
+      ]
+    ]
   }
 }
