--- a/package.json
+++ b/package.json
@@ -13,27 +13,28 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/source-sans-pro": "^0.2.2",
-    "@expo/match-media": "^0.3.0",
+    "@expo/webpack-config": "^18.1.1",
     "@react-navigation/native": "^6.0.10",
-    "expo": "~45.0.0",
-    "expo-app-loading": "~2.0.0",
-    "expo-font": "~10.1.0",
-    "expo-screen-orientation": "~4.2.0",
-    "expo-status-bar": "~1.3.0",
-    "expo-web-browser": "~10.2.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7",
+    "expo": "^49.0.2",
+    "expo-app-loading": "^1.1.2",
+    "expo-font": "~11.4.0",
+    "expo-screen-orientation": "~6.0.2",
+    "expo-splash-screen": "~0.20.4",
+    "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "~12.3.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-native": "0.72.3",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6",
     "react-responsive": "^9.0.0-beta.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
+    "@types/react": "~18.2.14",
     "@types/react-native": "~0.66.13",
-    "typescript": "~4.3.5"
+    "typescript": "^5.1.3"
   },
   "private": true
 }
