--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
-    "deploy": "aws s3 sync web-build/ s3://lucesansushi.com.br --acl public-read"
+    "eject": "expo eject"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
